--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Basic Example with Click Counter</title>
     <script src="build/react.js"></script>
     <script src="build/react-dom.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script> -->
+    <script src="build/socketService.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
 
     <link rel="stylesheet" href="http://www.fox.com/sites/default/files/css/css_xE-rWrJf-fncB6ztZfd2huxqgxu4WO-qwma6Xer30m4.css">
     <link rel="stylesheet" href="http://www.fox.com/sites/default/files/css/css_DHcXHPYBSjIVaCQZEG4ZlpLkvslnFlBCnQUCzlbRBio.css">
@@ -29,89 +30,87 @@
     </div>
 
     <script>
-      // var videoList = [
-      //   {
-      //     "nid":182786,
-      //     "title":"Home Againxx",
-      //     "thumb":"http://www.fox.com/sites/default/files/styles/full_episodes_rotator_thumbnail/public/video-image-thumb/fox_TheXFiles_1AYW02_hulu.jpg",
-      //     "type":"video","url":"/watch/616557123886/7756658688"
-      //   },
-      //   {
-      //     "nid":187501,
-      //     "title":"Mr. Freeze",
-      //     "thumb":"http://www.fox.com/sites/default/files/styles/full_episodes_rotator_thumbnail/public/video-image-thumb/Gotham_GTH212_2500_1280x720_633837635777.jpg",
-      //     "type":"video",
-      //     "url":"/watch/633284675626/7684182528"
-      //   },
-      //   {
-      //     "nid":188896,
-      //     "title":"Wingman",
-      //     "thumb":"http://www.fox.com/sites/default/files/styles/full_episodes_rotator_thumbnail/public/video-image-thumb/fox_Lucifer_L106_hulu.jpg",
-      //     "type":"video",
-      //     "url":"/watch/638578243933/7766097408"
-      //   }
-      // ];
+      
 
-      var videoList = [];
+      // var videoList = function() {
+      //   var videoListx = [];
+      //   var ws = new WebSocket('ws://rocky-sierra-19135.herokuapp.com/');
+      //   ws.onmessage = function (event) {
+      //     console.log(event.data);
+      //     return event.data;
+      //   };
 
-      var ws = new WebSocket('ws://rocky-sierra-19135.herokuapp.com/');
-      ws.onmessage = function (event) {
-        var videoListx;
-        // console.log(event.data);
-        // var li = document.createElement('li');
-        // li.innerHTML = JSON.parse(JSON.stringify(event.data));
-        // document.querySelector('#pings').appendChild(li);
-        videoListx = event.data;
-        // console.log(videoListx);
-        // return videoListx;
+      //   // console.log(videoListx);
 
-      };
-      // videoList = ws.onmessage.videoListx;
-      // console.log(this.videoListx);
+      //   // return videoListx;
+      // }
 
     </script>
     <script type="text/babel">
-      var ProperListRender = React.createClass({
-        displayName: "ProperListRender",
-
-        // getInitialState: function() {
-        //   return {list: []};
-        // },
-
-        loadCommentsDataServer: function() {
-          // var videoListx = this.state.data;
-          // return 'haha';
-          var ws = new WebSocket('ws://rocky-sierra-19135.herokuapp.com/');
-          ws.onmessage = function (event) {
-            // var videoListx = [];
-            // videoListx = event.data;
-            this.setState({data: event.data});
-          };
-        },
-
-        getInitialState: function() {
-          return {data: []};
-        },
-        componentDidMount: function() {
-          this.loadCommentsDataServer();
-          // setInterval(this.loadCommentsFromServer, this.props.pollInterval);
-        }
+      var socketService = new SocketService();
+      var IndividualLists = React.createClass({
+        
 
         render: function() {
-          var listItems = this.loadCommentsDataServer.map(function(video, idx) {
-            console.log(idx);
-                return 
-                <li>{this.testTest}
-                  <a href={video.url}>
-                    <img src={video.thumb} />
-                  </a>
-                  <h3><a href={video.url}>{video.title}</a></h3>
-                </li>;
-              });
-          return <ul>{listItems}</ul>
+          // var commentNodes = this.props.data.map(function (comment, index) {
+          //   console.log(comment);
+          //   // return Comment( {key:index, author:comment.author}, comment.text);
+          // });
+          var xxx = this.props.data;
+
+          console.log(xxx);
+          return (
+            <li>Lalala</li>
+          );
         }
       });
-      ReactDOM.render(React.createElement(ProperListRender, null), document.getElementById('exampleList'));
+
+      var ProperListRender = React.createClass({
+        displayName: 'ProperListRender',
+        requestComments: function() {
+          this.setState({data: []});
+          var socket = this.props.socketService;
+          console.log(this.props);
+          // console.log(socket);
+          // socket.sendRequest({}, function (message) {
+          //   console.log(message);
+          //   if (message.$type === 'dataReceived') {
+          //     if (!message.data) return;
+          //     this.state.data.push(message.data);
+          //   }
+          //   if (message.$type === 'dataCompleted') {
+          //     socket.requestComplete(message.$id);
+          //     this.setState({data: this.state.data});
+          //   }
+          //   if (message.$type === 'error') {
+          //     socket.requestComplete(message.$id);
+          //   }
+          // }.bind(this));
+        },
+        getInitialState: function () {
+          return {data: []};
+        },
+        componentWillMount: function () {
+          this.requestComments();
+        },
+        render: function() {
+          return (
+            <ul>
+              <IndividualLists />
+            </ul>  
+          );
+        }
+      });
+
+      ReactDOM.render(
+        <ProperListRender />,
+        document.getElementById('exampleList')
+      );
+
+      // React.renderComponent(
+      //   ProperListRender({socketService:socketService}),
+      //   document.getElementById('exampleList')
+      // );
     </script>
 
 
